Opened 14 months ago
Closed 14 months ago
#18732 closed bug (fixed)
regex.h: after hrev57485, can't build with regex.h included
Reported by: | korli | Owned by: | nobody |
---|---|---|---|
Priority: | critical | Milestone: | R1/beta5 |
Component: | System/POSIX | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
/boot/system/develop/headers/posix/regex.h:25:10: fatal error: compatibility/bsd/features.h: No such file or directory 25 | #include <compatibility/bsd/features.h>
Change History (5)
comment:1 by , 14 months ago
comment:2 by , 14 months ago
seems there is already a change (but no bug report ...): https://review.haiku-os.org/c/haiku/+/7287
follow-up: 4 comment:3 by , 14 months ago
Why abandon your change? I think that was the better strategy?
comment:4 by , 14 months ago
Replying to waddlesplash:
Why abandon your change? I think that was the better strategy?
I didn't test a full build, only libroot.
comment:5 by , 14 months ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fix merged in hrev57497.
Note:
See TracTickets
for help on using tickets.
proposed change: https://review.haiku-os.org/c/haiku/+/7288